# atom.engine

./: .clang-tidy  .gitignore  CMakeLists.txt  vcpkg.json
cmake/: EngineTargets.cmake
cmake/in/: EngineConfig.cmake.in  engine.pc.in
content/include/: pch.hpp
content/include/application/: DockerPanel.hpp  KeyboardInput.hpp  Language.hpp  Light.hpp  MouseInput.hpp  Panel.hpp  PerformancePanel.hpp  Window.hpp  application.hpp
content/include/assets/: ShaderProgram.hpp
content/include/components/: Camera.hpp  Physics.hpp  Renderable.hpp  Transform.hpp
content/include/global/: ModelManager.hpp
content/include/io/: file.hpp
content/include/math/: Aabb.hpp  Vector.hpp  algorithm.hpp
content/include/pchs/: ecs.hpp  graphics.hpp  math.hpp  stbi.hpp  std.hpp
content/include/platform/: path.hpp
content/include/systems/: systems.hpp
content/include/systems/render/: Animation.hpp  BufferObject.hpp  Camera.hpp  CubeMap.hpp  Framebuffer.hpp  Light.hpp  Material.hpp  Mesh.hpp  Model.hpp  Scene.hpp  SceneManager.hpp  ShaderProgram.hpp  Texture.hpp  Transform.hpp  Vertex.hpp  VertexArrayObject.hpp
content/include/systems/sound/: SoundBuffer.hpp  SoundContext.hpp  SoundDevice.hpp  SoundFile.hpp  SoundListener.hpp  SoundSource.hpp
content/src/application/: DockerPanel.cpp  KeyboardInput.cpp  MouseInput.cpp  Panel.cpp  PerformancePanel.cpp  Window.cpp
content/src/io/: file.cpp
content/src/math/: Aabb.cpp
content/src/pchs/: ecs.cpp  graphics.cpp  logger.cpp  math.cpp  stb.cpp  std.cpp
content/src/systems/: physics.cpp  render.cpp  sound.cpp
content/src/systems/render/: BufferObject.cpp  CubeMap.cpp  Framebuffer.cpp  Material.cpp  Mesh.cpp  Model.cpp  ShaderProgram.cpp  Texture.cpp  VertexArrayObject.cpp
content/src/systems/sound/: SoundBuffer.cpp  SoundContext.cpp  SoundDevice.cpp  SoundFile.cpp  SoundListener.cpp  SoundSource.cpp
creator/include/: Paths.hpp
creator/include/panels/: ApplicationDockerPanel.hpp  ScenePanel.hpp  WorldPanel.hpp
creator/src/: main.cpp
creator/src/panels/: ApplicationDockerPanel.cpp  WorldPanel.cpp
precompiler/: main.cpp
resources/shaders/: example.frag.glsl  example.vert.glsl  ground.frag.glsl  ground.vert.glsl  pbr.frag.glsl  renderShadowDepth.vert.glsl  renderSphere.frag.glsl  renderSphere.vert.glsl  renderSphereWithShadow.frag.glsl  renderSphereWithShadow.vert.glsl
resources/shaders/lighting/: blinnPhong.frag.glsl
resources/shaders/post/: copy.frag.glsl  grey.frag.glsl  inverse.frag.glsl
test/: main.cpp
test/include/: Content.hpp  Events.hpp  KeyboardCallback.hpp  Local.hpp  MouseCallback.hpp  PhysicsSystem.hpp  RenderSystem.hpp  ResourcePath.hpp  SoundSystem.hpp
test/src/: KeyboardCallback.cpp  MouseCallback.cpp  PhysicsSystem.cpp  RenderSystem.cpp  SoundSystem.cpp  main.cpp
